/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.6.4/userguide/building_java_projects.html
 */

plugins {
    id 'java'
    id 'application'
    // id 'checkstyle'
}

// checkstyle {
//     toolVersion = '8.45.1'
//     configFile = file('checkstyle.xml')
// }

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    flatDir {
        dirs 'lib'
    }
}

dependencies {
    implementation ':annotation'                           // @CheckForNullのタグ付用
    // 証明書作成用（jdk15on系は1.70で開発終了のため後継のjdk18onへ移行）
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.85'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.85'
    implementation ':browsermob-dist-2.1.4'                // HTTPS通信用
    implementation 'commons-codec:commons-codec:1.22.1'    // 汎用
    implementation 'commons-io:commons-io:2.22.0'          // 汎用
    implementation 'org.apache.commons:commons-lang3:3.20.0' // 汎用
    implementation 'commons-logging:commons-logging:1.4.0' // 汎用
    implementation 'org.glassfish:javax.json:1.1.4'        // JSON処理用
    implementation 'com.melloware:jintellitype:1.4.1'      // ショートカットキー用
    // HTTPS通信用（旧org.littleshoot系littleproxy 1.1.2は開発終了のため後継のio.github.littleproxyへ移行、
    // Netty 4.2系を採用しているためJDK16+の--add-opens回避が不要になる可能性がある）
    implementation 'io.github.littleproxy:littleproxy:2.8.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.26.1' // ログ用
    implementation 'org.apache.logging.log4j:log4j-core:2.26.1' // ログ用
    implementation 'com.opencsv:opencsv:5.12.0'            // CSV処理用
    // 報告書のタグ付用
    // NOTE: io.protostuff:*:1.8.0への移行を試したが、既存のbattlelog/*.dat(古いcom.dyuproject版で
    // 書き出したデータ)の一部がProtostuffException: Corrupt inputで読めなくなったため見送り、1.0.7に戻した
    implementation ':protostuff-api-1.0.7'
    implementation ':protostuff-collectionschema-1.0.7'
    implementation ':protostuff-core-1.0.7'
    implementation ':protostuff-runtime-1.0.7'
    // 描画用（Maven Centralから取得。旧lib/swt.jar(2016年ビルド)は未使用）
    // Arm64: org.eclipse.platform:org.eclipse.swt.win32.win32.aarch64
    implementation 'org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.134.0'
    // JavaScriptエンジン(Nashorn)。Java15でJDK本体から削除されたため外部依存として追加
    implementation 'org.openjdk.nashorn:nashorn-core:15.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

application {
    // Define the main class for the application.
    mainClass = 'logbook.gui.ApplicationMain'
    // browsermob-dist/littleproxyが内包する古いNettyがJDK16+の強いカプセル化に
    // 抵触して起動時にInaccessibleObjectExceptionを起こすため、reflectionを許可する
    // littleproxy(Netty)がダイレクトバッファへのUnsafeアクセスにリフレクションを使うため、
    // Nettyのバージョンによらず必要(JDK16+のデフォルトの強いカプセル化に対する一般的な要件)
    applicationDefaultJvmArgs = [
        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED',
    ]
}

run {
    jvmArgs = application.applicationDefaultJvmArgs
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java'] // .classpath の src に相当
        }
    }
}

// 記載しておかないと「logbook.jarにメイン・マニフェスト属性がありません」が出る
jar {
    manifest {
        attributes(
            'Created-By': "Gradle ${gradle.gradleVersion}",
            'Main-Class': 'logbook.gui.ApplicationMain',
            // dest/compress.ps1 は各OS向けSWTを常に "swt.jar" という名前で logbook_lib に配置するため、
            // Mavenから解決される実ファイル名(例: org.eclipse.swt.win32.win32.x86_64-3.134.0.jar)ではなく
            // "swt.jar" に読み替える
            'Class-Path': '. ' + configurations.runtimeClasspath.files.collect {
                def name = it.name.startsWith('org.eclipse.swt.') ? 'swt.jar' : it.name
                "logbook_lib/${name}"
            }.join(' '),
            // browsermob-dist/littleproxyが内包する古いNettyがJDK16+の強いカプセル化に
            // 抵触して起動時にInaccessibleObjectExceptionを起こすため、reflectionを許可する
            // (java -jar 直接起動するmacOS/Linux版はvmargを指定する launcher が無いためここで指定する)
            'Add-Opens': 'java.base/java.nio java.base/sun.nio.ch java.base/jdk.internal.misc'
        )
    }
}
